fix: production down — Map.of() genuinely doesn't compile on Java 8
Railway's Nixpacks build must have shifted to a stricter JDK resolution
and the build silently produced no jar ("Unable to access jarfile
target/*.jar"), taking production down entirely. This was never a false
alarm — Map.of() is a real Java 9+ API, and this pom targets bytecode
level 1.8. It happened to compile before only because Nixpacks previously
picked a newer JDK using non-strict -source/-target flags (which don't
enforce old-version API restrictions); apparently no longer the case.

Replaced both Map.of() call sites with Collections.singletonMap(), which
is genuinely Java 8 compatible regardless of which JDK ends up building
this — no more relying on lucky compiler flag semantics.

Verified with a real local Java 8 JDK: `mvn compile` and `mvn package`
both succeed for the first time all session (previously always failed
with "cannot find symbol: Map.of" using the actual Java 8 install here).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>