@@ -6,7 +6,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.util.Map;
+import java.util.Collections;
 
 @RestController
 @RequestMapping("/api/resume")
@@ -24,7 +24,7 @@ public class ResumeController {
             if (contentType == null || !contentType.equals("application/pdf"))
                 return ResponseEntity.badRequest().body("Only PDF files are accepted.");
             String summary = resumeService.extractAndSummarise(file.getBytes());
-            return ResponseEntity.ok(Map.of("summary", summary));
+            return ResponseEntity.ok(Collections.singletonMap("summary", summary));
         } catch (Exception e) {
             return ResponseEntity.badRequest().body(e.getMessage());
         }
